[tool.poetry]
authors = ["Camillo Visini <c.visini@gmail.com>"]
description = "Menu bar utility app (macOS) for controlling a standing desk."
license = "MIT"
name = "stand"
version = "0.1.3"

[tool.poetry.dependencies]
paramiko = "^2.7.2"
python = "^3.8"
rumps = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
